# talk-booking

./: .gitlab-ci.yml
.github/workflows/: ci.yml  publish-ghcr.yml
ci_cd/docker/: Dockerfile
ci_cd/python/: Dockerfile
infrastructure/global/vpc/: ci-cd.yml  main.tf  network.tf  outputs.tf  security_groups.tf  variables.tf
infrastructure/modules/talk-booking-service/: ecr.tf  ecs_service.tf  iam.tf  load_balancer.tf  variables.tf
infrastructure/talk-booking-service/: ci-cd.yml
infrastructure/talk-booking-service/development/: main.tf  variables.tf
services/talk_booking/: Dockerfile  ci-cd.yml  deploy.py  pyproject.toml
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/web_app/: main.py
